Update Malicious Website Detection ML model.ipynb

--- a/Malicious Website Detection ML model.ipynb
+++ b/Malicious Website Detection ML model.ipynb
@@ -13,7 +13,7 @@
    "id": "9d659b76",
    "metadata": {},
    "source": [
-    "## Aditya Mani Tripathi (12017318)"
+    "## Sai Satvik Varma (12016566)"
    ]
   },
   {
